quick fix: edit z-indexes

--- a/FE/src/styles/Header.css
+++ b/FE/src/styles/Header.css
@@ -2,7 +2,7 @@
   display: flex; /*chay sang ngang*/
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
   position: sticky;
-  z-index: 1;
+  z-index: 2;
   top: 0;
   width: 100%;
   justify-content: center;
